--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,164 +1,151 @@
-.navbartotal{
+.navBarTotal{
     display: flex;
-    background-color:aliceblue;
-    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
 }
-.navbardivleft{
+.navBarLogo{
+    width: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.navBarLogoImg{
+    width: 100px;
+    height: 70px;
+    cursor: pointer;
+}
+.navBarLocation{
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+.detLoc{
+    text-align: center;
+    color: white;
+    font-size: 10px;
+}
+.navBarSearch{
+    width: 33%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#dropdown-basic{
+    border-radius: 10px 0 0 10px;
+    background-color: grey;
+    border: 1px solid grey;
+}
+#searchBar{
+    border-radius: 0 0 0 0;
+}
+#searchIcon{
+    border-radius: 0 10px 10px 0;
+}
+.navBarRight{
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.navBarRightLang{
     width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.navbardivmiddle{
-    width: 40%;
+#dropdown-lang{
+    background:none;
+    border: none;
+}
+.navBarRightSignin{
+    width: 19%;
     display: flex;
     align-items: center;
     justify-content: right;
 }
-.navbardivright{
-    width: 40%;
+.navBarRightRegister{
+    width: 26%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
-.navbarright-ellipses{
+.navBarRightRetOrd{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+}
+.navBarRightCart{
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    cursor: pointer;
+}
+.navBarRightEllipsis{
+    width: 45%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
     display: none;
-    align-items: center;
-    justify-content: right;
-    margin: 5vh;
-    width: 40%;
 }
-.logoimg{
-    width: 120px;
-    height: 80px;
-}
-#navbarsearchinput{
-    width: 50vh;
-    border: 1px solid black;
-    border-radius: 10px 0px 0px 10px;
-}
-#navbarsearchicon{
-    border-radius: 0px 10px 10px 0px;
-    border: 1px solid black;
-}
-#navbarbtns{
-    font-weight: bold;
-    font-size: 3vh;
-}
-@media (min-width: 1070px) and (max-width:1365px){
-    .navbardivleft{
+@media(min-width:480px) and (max-width:768px){
+    .navBarLogo{
+        width: 22%;
+    }
+    .navBarRightEllipsis{
+        display: flex;
         width: 15%;
     }
-    .navbardivmiddle{
-        width: 35%;
-    }
-    .navbardivright{
-        width: 50%;
-    }
-}
-@media (min-width:768px) and (max-width:1069px){
-    .navbardivleft{
-        width: 35%;
-    }
-    .navbardivmiddle{
-        width: 55%;
-    }
-    .navbardivright{
-        width: 10%;
+    .navBarRight{
         display: none;
     }
-    .navbarright-ellipses{
-        width: 10%;
-        display: flex;
+    .navBarSearch{
+        width: 45%;
     }
-    .menu-icon{
-        width: 2vh;
-        height: 1.5vh;
+    .navBarLocation{
+        width: 18%;
     }
 }
-@media(min-width:496px) and (max-width:767px){
-    .navbarright-ellipses{
-        display: flex;
-        width: 10%;
-    }
-    .navbardivright{
+@media(min-width:320px) and (max-width:479px){
+    .navBarRight{
         display: none;
-        width: 10%;
     }
-    .navbardivleft{
-        width: 35%;
-    }
-    .navbardivmiddle{
-        width: 55%;
-    }
-    .menu-icon{
-        width: 2vh;
-        height: 1.5vh;
-    }
-}
-@media(min-width:320px) and (max-width:495px){
-    .navbartotal{
+    .navBarLogo{
         width: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 1.5vh;
     }
-    .navbardivright{
+    .navBarRightEllipsis{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    .navBarLocation{
+        display: flex;
+        width: 100%;
+    }
+    .locSymbol{
         display: none;
     }
-    .navbarright-ellipses{
+    .detLoc{
+        font-size: 13px;
+        margin: 2px;
+    }
+    .navBarSearch{
         display: flex;
-        width: 98.5%;
-        justify-content: center;
-        margin: 2vh 0;
+        width: 100%;
     }
-    .navbardivleft{
-        width: 98.5%;
-    }
-    .navbardivmiddle{
-        width: 98.5%;
+    .navBarTotal{
         display: flex;
-        justify-content: center;
+        flex-direction: column;
     }
-    .menu-icon{
-        width: 2vh;
-        height: 1.5vh;
-    }
-}
-#hamburger-menu-btn{
-    background-color: white;
-}
-.showmenuul{
-    list-style-type: none;
-    background-color: black;
-    margin: 0;
-    padding: 0;
-}
-.navlinks{
-    text-decoration: none;
-    font-size: 10px;
-    cursor: pointer;
-    color: white;
-}
-#menubtn{
-    color: white;
-    border-bottom: 1px solid white;
-    border-radius: 0;
-}
-.categorymenudiv{
-    color: white;
-    background-color:grey;
-    margin: 0 5px;
-}
-.categorymenuul{
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-
-}
-.categorymenuli{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
 }
