--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -98,6 +98,9 @@
     align-items: center;
     display: none;
 }
+.sgnAndReg{
+    display: none;
+}
 @media(min-width:480px) and (max-width:768px){
     .navBarLogo{
         width: 22%;
@@ -114,6 +117,9 @@
     }
     .navBarLocation{
         width: 18%;
+    }
+    .sgnAndReg{
+        display: none;
     }
 }
 @media(min-width:320px) and (max-width:479px){
@@ -147,5 +153,13 @@
     .navBarTotal{
         display: flex;
         flex-direction: column;
+    }
+    .sgnAndReg{
+        display: flex;
+        width: 70%;
+        justify-content: right;
+    }
+    .navBarImgDiv{
+        width: 30%;
     }
 }
