--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
     cursor: pointer;
 }
 .navBarLocation{
-    width: 10%;
+    width: 15%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +46,7 @@
     border-radius: 0 10px 10px 0;
 }
 .navBarRight{
-    width: 45%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,19 +62,13 @@
     border: none;
 }
 .navBarRightSignin{
-    width: 19%;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-.navBarRightRegister{
-    width: 26%;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .navBarRightRetOrd{
-    width: 25%;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,7 +77,7 @@
     cursor: pointer;
 }
 .navBarRightCart{
-    width: 10%;
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -103,17 +97,17 @@
 }
 @media(min-width:480px) and (max-width:768px){
     .navBarLogo{
-        width: 22%;
+        width: 23%;
     }
     .navBarRightEllipsis{
         display: flex;
-        width: 15%;
+        width: 28%;
     }
     .navBarRight{
         display: none;
     }
     .navBarSearch{
-        width: 45%;
+        width: 47%;
     }
     .navBarLocation{
         width: 18%;
@@ -161,5 +155,8 @@
     }
     .navBarImgDiv{
         width: 30%;
+    }
+    .ellipsisSignIn{
+        display: none;
     }
 }
