--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,7 +34,7 @@
     font-weight: bold;
     text-decoration: underline;
     color: red;
-    font-size: 18px;
+    font-size: 20px;
 }
 .socialIcons{
     display: flex;
@@ -68,4 +68,7 @@
 }
 .tAndCPp:hover{
     color:grey;
+}
+#footerBtns{
+    color: white;
 }
