--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
     color: white;
 }
 .footerDivTop{
-    background-color: #232F3E;
+    background-color: black;
     width: 100%;
     display: flex;
     align-items: center;
